...
    <string name="people_naming_help">Hilfe zum Benennen</string>
    <string name="people_name_person">Person benennen</string>
    <string name="people_check_pending">Offene Aktion prüfen</string>
    <string name="common_next">Weiter</string>
    <string name="people_pass_complete">Durchgang abgeschlossen</string>
    <string name="people_new_pass">Neuen Durchgang starten</string>
    <string name="people_close_preview">Vorschau schließen</string>
    <string name="people_help_name">Stift: Person benennen oder einer vorhandenen Person zuordnen.</string>
    <string name="people_help_preview">Portrait 250 ms halten: Originalfoto anzeigen. Dabei nach unten wischen zum Vergrößern, nach oben zum Verkleinern. Loslassen schließt die Vorschau.</string>
    <string name="people_help_swipe">Nach oben wischen: Gruppe ignorieren. Nach links: Gruppe überspringen. Nach rechts: letztes Überspringen zurücknehmen. Bei langem Inhalt zunächst bis zum Ende scrollen.</string>
    <string name="people_help_undo">Unter … findest du dieselben Gruppenaktionen. Nach dem Ignorieren kannst du die Aktion kurz über „Rückgängig“ zurücknehmen.</string>
    <string name="people_face_number">Gesicht %1$d</string>
    <string name="people_show_original">Originalfoto anzeigen</string>
...
